--- a/animation.html
+++ b/animation.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="h-img">
-            <img src="img/homepic (2).png">
+            <img src="homepic (2).png">
         </div>
     
     </section>
