--- a/animation.html
+++ b/animation.html
@@ -30,7 +30,7 @@
         <div class="h" >   
             <h1>Ava Samantha Arce</h1>
             <h3>I am an <span class="mul">IT Student</span> </h3>
-            <p>A freshmen student of FEU Institute of Technology and currently taking Bachelor of Science in Information Technology with a specialization in Web and Mobile Application. As a passionate and aspiring IT professional, I am eager to delve into the dynamic and ever-evolving world of technology.</p>
+            <p>A sophormore student of FEU Institute of Technology and currently taking Bachelor of Science in Information Technology with a specialization in Web and Mobile Application. As a passionate and aspiring IT professional, I am eager to delve into the dynamic and ever-evolving world of technology.</p>
 
             <div class="socmed">
                 <a href="https://www.facebook.com/avasamanthaarce15"><i class='bx bxl-facebook'></i></a>
