--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="animation.css">
+    <link rel="stylesheet" href="./assets/css/animation.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="icon" type="image/x-icon" href="img/cc2/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon-32x32.png">
     <title>Arce</title>
 </head>
 <body>
@@ -41,7 +41,7 @@
         </div>
 
         <div class="h-img">
-            <img src="homepic (2).png">
+            <img src="./assets/img/homepic (2).png">
         </div>
     
     </section>
@@ -62,7 +62,7 @@
     </footer>
     
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-    <script src="animation.js"></script>
+    <script src="./assets/js/animation.js"></script>
 
 </body>
 </html>
